add integration test and set default values for env vars

--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,29 @@
             <artifactId>java-telegram-bot-api</artifactId>
             <version>6.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -45,7 +64,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>com.massaro.cuofco.MortgageRateCheck</mainClass>
+                                    <mainClass>com.massaro.cuofco.Main</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
