--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -32,20 +33,27 @@ jobs:
           readme_file: 'README.md'
       - name: Determine alpine version
         id: version
-        run: echo "VERSION=$(head Dockerfile -n 1 | cut -d ':' -f2)" >> $GITHUB_OUTPUT
+        run: echo "VERSION=$(head Dockerfile -n 1 | cut -d ':' -f2 | cut -d " " -f1)" >> $GITHUB_OUTPUT
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+      - name: Run tests in docker image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: linux/amd64
+          context: .
+          target: test
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots clean install
+        run: mvn --batch-mode --update-snapshots clean install -DskipITs
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: ${{ github.ref == 'refs/heads/main' }}
           context: .
+          target: production
           tags: |
             stevenmassaro/cuofco-mortgage-rate-check:latest
             stevenmassaro/cuofco-mortgage-rate-check:${{ steps.version.outputs.VERSION }}
