--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,51 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker:
+  docker-test:
+    name: Run tests inside docker image
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - uses: actions/checkout@v4
+      - name: Run tests in docker image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: linux/amd64
+          context: .
+          target: test
+
+  maven-build:
+    name: Maven build
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots clean install -DskipITs
+      - name: Save built jar
+        uses: actions/cache/save@v3
+        with:
+          path: |
+            target
+          key: built-jar
+
+  docker-build:
+    name: Build and push docker image
+    runs-on: ubuntu-latest
+    needs:
+      - docker-test
+      - maven-build
+    timeout-minutes: 10
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -21,6 +63,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v4
+      - name: Restore built jar
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            target
+          key: built-jar
       - name: Push README to Dockerhub
         uses: christian-korneck/update-container-description-action@v1
         env:
@@ -34,20 +82,6 @@ jobs:
       - name: Determine alpine version
         id: version
         run: echo "VERSION=$(head Dockerfile -n 1 | cut -d ':' -f2 | cut -d " " -f1)" >> $GITHUB_OUTPUT
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Run tests in docker image
-        uses: docker/build-push-action@v5
-        with:
-          platforms: linux/amd64
-          context: .
-          target: test
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots clean install -DskipITs
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
